Lagt til nytt kodeverk